# connecpy

./: .gitignore  .goreleaser.yaml  DEVELOPMENT.md  LICENSE  MAINTAINERS.md  RATIONALE.md  README.md  buf.gen.yaml  codecov.yml  connecpy.code-workspace  go.mod  go.sum  go.work  go.work.sum  hack.go  install.sh  justfile  mkdocs.yml  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: add-to-project.yaml  ci.yaml  codeql.yml  pr-title.yaml  release.yaml
conformance/: buf.gen.yaml  pyproject.toml
conformance/test/: _util.py  client.py  config.yaml  server.py  test_client.py  test_conformance.py  test_server.py
conformance/test/connectrpc/conformance/v1/: client_compat_pb2.py  client_compat_pb2.pyi  config_pb2.py  server_compat_pb2.py  server_compat_pb2.pyi  service_connecpy.py  service_pb2.py  service_pb2.pyi  suite_pb2.py  suite_pb2.pyi
conformance/test/pb/connectrpc/conformance/v1/: client_compat_pb2.py  client_compat_pb2.pyi  server_compat_pb2.py  server_compat_pb2.pyi  service_pb2.py  service_pb2.pyi  suite_pb2.py  suite_pb2.pyi
conformance/test/proto/: LICENSE
conpy/: asgi.py  async_client.py  client.py  context.py  exceptions.py  interceptor.py  server.py
docs/: api.md  examples.md  getting-started.md  index.html  index.md  install.sh  reference.md  usage.md
example/: README.md  async_client.py  buf.gen.yaml  buf.yaml  client.py  client_sync.py  flask_mount.py  grpc_client.py  grpc_server.py  haberdasher.proto  haberdasher_connecpy.py  haberdasher_conpy.py  haberdasher_edition_2023.proto  haberdasher_edition_2023_connecpy.py  haberdasher_edition_2023_pb2.py  haberdasher_edition_2023_pb2.pyi  haberdasher_pb2.py  haberdasher_pb2.pyi  haberdasher_pb2_grpc.py  pyproject.toml  requirements.txt  routing_asgi.py  server.py  service.py  starlette_mount.py  wsgi_server.py  wsgi_service.py
example/connecpy/: asgi.py  base.py  client.py  context.py  exceptions.py
example/example/: _eliza.py  async_client.py  client.py  client_sync.py  edition_features_test_connecpy.py  edition_features_test_pb2.py  edition_features_test_pb2.pyi  eliza_client.py  eliza_client_sync.py  eliza_connecpy.py  eliza_connect.py  eliza_pb2.py  eliza_service.py  eliza_service_sync.py  flask_mount.py  grpc_client.py  grpc_server.py  haberdasher_connecpy.py  haberdasher_edition_2023_connecpy.py  haberdasher_edition_2023_pb2.py  haberdasher_edition_2023_pb2.pyi  haberdasher_pb2.py  haberdasher_pb2_grpc.py  routing_asgi.py  server.py  service.py  starlette_mount.py  transport_examples.py  transport_examples_async.py  wsgi_server.py  wsgi_service.py
example/google/protobuf/: empty_connecpy.py  empty_pb2.py  empty_pb2.pyi
example/proto/example/: edition_features_test.proto  haberdasher.proto
noextras/: README.md  pyproject.toml
noextras/test/: test_compression_default.py
protoc-gen-connecpy/: README.md  go.mod  go.sum  main.go  pyproject.toml
protoc-gen-connecpy/generator/: config.go  generator.go  generator_test.go  template.go  template_test.go
protoc-gen-connecpy/scripts/: generate_wheels.py
protoc-gen-connect-python/: .goreleaser.yaml  README.md  go.mod  main.go  pyproject.toml
protoc-gen-connect-python/generator/: config.go  generator.go  generator_test.go  template.go  template_test.go
protoc-gen-connect-python/scripts/: generate_wheels.py
protoc-gen-conpy/: README.md  go.mod  main.go
protoc-gen-conpy/generator/: generator.go  template.go
src/connecpy/: __init__.py  _asyncio_timeout.py  _client_async.py  _client_shared.py  _client_sync.py  _codec.py  _compression.py  _envelope.py  _headers.py  _interceptor_async.py  _interceptor_sync.py  _protocol.py  _server_async.py  _server_shared.py  _server_sync.py  _version.py  asgi.py  async_client.py  base.py  client.py  code.py  compression.py  context.py  cors.py  encoding.py  errors.py  exceptions.py  headers.py  interceptor.py  method.py  request.py  server.py  shared_client.py  types.py  wsgi.py
src/connecpy/transport/: __init__.py  base.py  connect.py  connect_async.py  grpc.py  grpc_async.py  types.py
src/connecpy/transport/client/: __init__.py  base.py  client.py  client_async.py  connect.py  connect_async.py  grpc.py  grpc_async.py  types.py
src/connectrpc/: _asyncio_timeout.py  _client_async.py  _client_shared.py  _client_sync.py  _codec.py  _compression.py  _envelope.py  _headers.py  _interceptor_sync.py  _protocol.py  _server_async.py  _server_shared.py  _server_sync.py  _version.py  client.py  errors.py  method.py  server.py
src/conpy/: async_client.py  base.py  errors.py
test/: buf.gen.yaml  haberdasher_connecpy.py  haberdasher_connect.py  haberdasher_edition_2023_connecpy.py  haberdasher_pb2.py  test_client.py  test_compression.py  test_cors.py  test_details.py  test_edition_2023.py  test_encoding.py  test_error_handling.py  test_errors.py  test_example.py  test_grpc_transport_integration.py  test_grpc_transport_streaming.py  test_headers.py  test_interceptor.py  test_roundtrip.py  test_transport.py  test_transport_api.py  test_transport_retry_async.py  test_transport_streaming.py  test_transport_timeout.py
test/conformance/: client.py  config.yaml
test/conformance/connectrpc/conformance/v1/: service_connecpy.py
test/proto/: haberdasher.proto
test/transport_api/: __init__.py  buf.gen.yaml  buf.yaml  haberdasher_connecpy.py  haberdasher_edition_2023_connecpy.py  haberdasher_edition_2023_pb2.py  haberdasher_pb2.py  haberdasher_pb2.pyi  test_error_handling.py  test_generated_transport_api.py  test_grpc_transport_integration.py  test_grpc_transport_streaming.py  test_transport.py  test_transport_retry_async.py  test_transport_streaming.py  test_transport_timeout.py
