[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "grpcio",
    "protobuf",
    "connecpy",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "grpcio-tools",
    "uvicorn>",
    "black>=23.12.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["example"]
