[project]
name = "protoc-gen-connecpy"
version = "2.2.0"
description = "Code generator for the Connect Protocol"
authors = [{ name = "Connecpy authors" }]
requires-python = ">= 3.10"
readme = "README.md"
license-files = ["LICENSE"]

[build-system]
requires = ["uv_build>=0.7.21,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "protoc_gen_connecpy"
module-root = ""
data = { scripts = "out/bin" }
