[project]
name = "protoc-gen-connect-python"
version = "0.5.0"
description = "Code generator for connect-python"
maintainers = [
    { name = "Anuraag Agrawal", email = "anuraaga@gmail.com" },
    { name = "Spencer Nelson", email = "spencer@firetiger.com" },
    { name = "Stefan VanBuren", email = "svanburen@buf.build" },
    { name = "Yasushi Itoh", email = "i2y@todo" },
]
requires-python = ">= 3.10"
readme = "README.md"
license-files = ["LICENSE"]
keywords = [
    "protoc",
    "protobuf",
    "protocol-buffers",
    "code-generation",
    "connect",
    "connectrpc",
    "connect-protocol",
    "connect-rpc",
    "rpc",
    "compiler",
    "plugin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Go",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/connectrpc/connect-python"
Repository = "https://github.com/connectrpc/connect-python"
Issues = "https://github.com/connectrpc/connect-python/issues"

[tool.uv]
dev-dependencies = ["wheel"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "protoc_gen_connectrpc"
module-root = ""
data = { scripts = "out/bin" }
